# GN

./: README.md
gn-multi_Cfile_example/: BUILD.gn  hello.cc  hello_shared.cc  hello_shared.h  hello_static.cc  hello_static.h
